--- a/ASAProj1/ASAProj1.vcxproj.filters
+++ b/ASAProj1/ASAProj1.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="ASAProj1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ASAProj1Din.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ASAProj1Din.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
